--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Ayon Sen</title>
+  <title>Ara Vartanian</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./github-light.css">
   <meta name="viewport" content="width=device-width">
@@ -13,10 +13,36 @@
 
   <div class="wrapper">
     <header>
-        Header
+        <img src="https://pbs.twimg.com/profile_images/2327734064/jjjfd23l3nitt4oy08vy_400x400.jpeg" class="myimg">
+        <h1>Ara Vartanian</h1>
+        <br>PhD Candidate
+        <br>Department of Computer Sciences
+        <br>
+        <br>email: first name and first four letters of my last name no spaces nor punctuation nor nuthin at cs dot wisc dot edu
+        <br>
+        <br>Is the above obfuscation a bit much? Okay, it's aravart. Show me what your crawler's got!
     </header>
     <section>
-        Section
+        <br><br>
+        <h3>About Me</h3>
+        I am a PhD candidate in the Department of Computer Sciences, University
+        of Wisconsin-Madison, working with advisor <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research focuses on interactive machine learning (iML), which is machine learning with a human-in-the-loop. In traditional machine learning, a human provides input to a learning system only through labeling examples.
+        <br/><br/>iML explores the improved learning outcomes possible when there is a richer interface between human and computational agent. Sometimes, for example, we don't have a lot of data at our disposal, but a human can efficiently guide a learner through a small number of specially constructed examples. Conversely, sometimes a computational system can aid a human in quickly synthesizing a large number of training examples for then training a computational learner.
+        <br/><br/>
+        From a theoretical standpoint, my research frames interactive machine learning within the context of <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">machine teaching</a> and <a href="https://www.datacamp.com/community/tutorials/active-learning">active learning</a>, touching on ideas and methods in reinforcement learning and optimal control theory. Since adversarial attacks are the flip side of machine teaching, I’ve also done work in <a href="https://ojs.aaai.org/index.php/AAAI/article/view/4183">adversarial learning</a>. Along the way, I’ve worked on applications in NLP, <a href="https://research.cs.wisc.edu/wpis/papers/oopsla17.pdf">program synthesis</a>, and <a href="https://pages.cs.wisc.edu/~jerryzhu/career/pub/ijcai16.pdf">topological data analysis</a>.
+        <!-- <br><br> -->
+        <!-- Here is my <a href="csaravart.pdf" target="_blank">resume</a>. -->
+        <br><br>
+        <h3>Publications</h3>
+        <ul>
+            <li><a href="https://arxiv.org/pdf/2010.10012.pdf"</a>Preference-Based Batch and Sequential Teaching: Towards a Unified View of Models</a>. Farnam Mansouri, Yuxin Chen, Ara Vartanian, Xiaojin Zhu, Adish Singla. NeurIPS, 2019.</li>
+            <li><a href="https://ojs.aaai.org/index.php/AAAI/article/view/4183">Attacking Data Transforming Learners at Training Time</a>. Scott Alfeld, Ara Vartanian, Lucas Newman-Johnson, Benjamin Rubinstein. AAAI, 2019.</li>
+            <li><a href="https://arxiv.org/pdf/1812.05725.pdf">Training Set Camouflage</a>. Ayon Sen, Scott Alfeld, Xuezhou Zhang, Ara Vartanian, Yuzhe Ma, and Xiaojin Zhu. GameSec, 2018.</li>
+            <li><a href="https://arxiv.org/pdf/1806.00938.pdf">Program Synthesis with Visual Specification</a>. Evan Hernandez, Ara Vartanian, and Xiaojin Zhu. ArXiv 1806.00938.</li>
+            <li><a href="https://research.cs.wisc.edu/wpis/papers/oopsla17.pdf">Model-Assisted Machine-Code Synthesis</a>. Venkatesh Srinivasan, Ara Vartanian, and Thomas Reps. OOPSLA, 2017.</li>
+            <li><a href="https://proceedings.neurips.cc/paper/2016/file/299fb2142d7de959380f91c01c3a293c-Paper.pdf">Active Learning with Oracle Epiphany</a>. Tzu-Kuo Huang, Lihong Li, Ara Vartanian, Saleema Amershi, and Xiaojin Zhu. NeurIPS, 2016.</li>
+            <li><a href="https://pages.cs.wisc.edu/~jerryzhu/career/pub/ijcai16.pdf">Stochastic Multiresolution Persistent Homology Kernel</a>. Xiaojin Zhu, Ara Vartanian, Manish Bansal, Duy Nguyen, and Luke Brandl. IJCAI, 2016.</li>
+        </ul>
     </section>
     <footer>
       <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
